// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toEqualRight() fails when object equals the right 1`] = `
"expect(received).not.toEqualRight(expectedRight)

Expected Either not to equal right:
  "same"

But it's the same."
`;

exports[`.not.toEqualRight() fails when object equals the right using an asymmetric matcher 1`] = `
"expect(received).not.toEqualRight(expectedRight)

Expected Either not to equal right:
  ObjectContaining {"test": "ok"}

But it's the same."
`;

exports[`.toEqualRight() fails when object does not equal the right 1`] = `
"expect(received).toEqualRight(expectedRight)

Expected Either to equal right:
  "different"

Received right:
  {"test": "ok"}"
`;

exports[`.toEqualRight() fails when object does not equal the right using an asymmetric matcher 1`] = `
"expect(received).toEqualRight(expectedRight)

Difference from Right:

- Expected
+ Received

- ObjectContaining {
-   "test": "nok",
+ Object {
+   "test": "ok",
  }"
`;

exports[`.toEqualRight() fails when object is a left 1`] = `
"expect(received).toEqualRight(expectedRight)

Expected Either to equal right:
  "same"

Received left."
`;
